SCRUM-4: fix OWASP critical CVEs — upgrade Spring Boot 3.2.3 → 3.5.3
- Upgrade spring-boot-starter-parent from 3.2.3 to 3.5.3 to transitively
  fix all 6 CRITICAL + 13 HIGH CVEs in tomcat-embed-core-10.1.19.jar and
  spring-core/spring-web 6.1.4 (CVE-2024-50379, CVE-2024-52316,
  CVE-2024-56337, CVE-2025-24813, CVE-2025-31651, CVE-2025-55754, CVE-2024-22259)
- Upgrade springdoc-openapi 2.3.0 → 2.8.6 for Spring Boot 3.5.x compatibility
- Fix SonarQube MAJOR S6204: replace Collectors.toList() with Stream.toList()
  in NotificationService.java
- Fix SonarQube MAJOR S1172: use payload param in sendEmail/sendSms log
  messages (NotificationService.java lines 235, 267)
- Remove unused PageRequest import from DeviceServiceTest.java
- Strengthen TelemetryResponse and IotDeviceSummaryResponse assertions in
  DeviceServiceTest.java to verify content, not just size (lines 172, 198)
- Build: 60/60 tests pass, 0 failures, coverage ≥ 80%

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>